syntax = "proto3";

package game.proto;

option java_package = "com.game.proto";
option java_outer_classname = "GameProto";
option java_multiple_files = true;  // 生成多个类文件，方便 Java 使用

// =====================================================================================
//                                    游戏协议定义
// =====================================================================================
// 
// 协议号规划：
//   0x0100 - 0x01FF : 登录模块 (256个协议)
//   0x0200 - 0x02FF : 玩家模块 (256个协议)
//   0x0300 - 0x03FF : 背包模块 (256个协议)
//   0x0400 - 0x04FF : 装备模块 (256个协议)
//   0x0500 - 0x05FF : 任务模块 (256个协议)
//   0x0600 - 0x06FF : 公会模块 (256个协议)
//   0x0700 - 0x07FF : 聊天模块 (256个协议)
//   0x0800 - 0x08FF : 排行模块 (256个协议)
//   0x0900 - 0x09FF : 活动模块 (256个协议)
//   0x0A00 - 0x0AFF : 邮件模块 (256个协议)
//   0x0B00 - 0x0BFF : 好友模块 (256个协议)
//   0x0C00 - 0x0CFF : 副本模块 (256个协议)
//   0x0D00 - 0x0DFF : 商城模块 (256个协议)
//   0xF000 - 0xFFFF : 推送消息 (4096个协议)
//
// =====================================================================================


// =====================================================================================
//                                   通用消息定义
// =====================================================================================

// 通用结果
message Result {
    int32 code = 1;              // 错误码，0 表示成功
    string message = 2;          // 错误信息
}

// 空请求
message EmptyRequest {
}

// 空响应
message EmptyResponse {
    Result result = 1;
}

// 物品信息 (配置ID + 数量)
message ItemInfo {
    int32 item_id = 1;           // 物品配置 ID
    int64 count = 2;             // 数量
}

// 物品实例 (带唯一 ID)
message ItemInstance {
    int64 uid = 1;               // 物品唯一 ID
    int32 item_id = 2;           // 物品配置 ID
    int64 count = 3;             // 数量
    int64 expire_time = 4;       // 过期时间 (0 表示永久)
    map<string, string> attrs = 5; // 扩展属性
}

// 装备信息
message EquipmentInfo {
    int64 uid = 1;               // 装备唯一 ID
    int32 equip_id = 2;          // 装备配置 ID
    int32 level = 3;             // 强化等级
    int32 star = 4;              // 星级
    repeated int32 gems = 5;     // 镶嵌宝石
    map<string, int32> attrs = 6; // 属性加成
}

// 奖励信息
message RewardInfo {
    repeated ItemInfo items = 1; // 物品奖励
    int64 gold = 2;              // 金币奖励
    int64 diamond = 3;           // 钻石奖励
    int64 exp = 4;               // 经验奖励
}

// 分页请求
message PageRequest {
    int32 page = 1;              // 页码 (从 1 开始)
    int32 size = 2;              // 每页大小
}

// 分页信息
message PageInfo {
    int32 page = 1;              // 当前页码
    int32 size = 2;              // 每页大小
    int64 total = 3;             // 总记录数
    int32 total_pages = 4;       // 总页数
}

// 时间范围
message TimeRange {
    int64 start_time = 1;        // 开始时间
    int64 end_time = 2;          // 结束时间
}


// =====================================================================================
//                              登录模块 (0x0100 - 0x01FF)
// =====================================================================================

// 登录类型
enum LoginType {
    LOGIN_TYPE_GUEST = 0;         // 游客登录
    LOGIN_TYPE_ACCOUNT = 1;       // 账号密码登录
    LOGIN_TYPE_GOOGLE = 2;        // Google 登录
    LOGIN_TYPE_FACEBOOK = 3;      // Facebook 登录
    LOGIN_TYPE_APPLE = 4;         // Apple 登录
    LOGIN_TYPE_TOKEN = 5;         // Token 自动登录
}

// 角色简要信息
message RoleBrief {
    int64 role_id = 1;            // 角色 ID
    string role_name = 2;         // 角色名
    int32 level = 3;              // 等级
    int32 avatar_id = 4;          // 头像 ID
    int32 gender = 5;             // 性别
    int32 profession = 6;         // 职业
    int64 combat_power = 7;       // 战力
    int64 last_login_time = 8;    // 最后登录时间
    int64 create_time = 9;        // 创建时间
    int32 server_id = 10;         // 所在服务器
}

// 服务器分组
message ServerGroup {
    int32 group_id = 1;           // 分组 ID
    string group_name = 2;        // 分组名
    repeated ServerInfo servers = 3;
}

// 服务器信息
message ServerInfo {
    int32 server_id = 1;          // 服务器 ID
    string server_name = 2;       // 服务器名
    int32 status = 3;             // 状态 (0:维护 1:流畅 2:繁忙 3:爆满 4:新服)
    int64 open_time = 4;          // 开服时间
    bool has_role = 5;            // 是否有角色
    int32 role_level = 6;         // 角色等级
    string role_name = 7;         // 角色名
    string server_tag = 8;        // 服务器标签
}

// 玩家完整信息
message PlayerFullInfo {
    int64 role_id = 1;            // 角色 ID
    string role_name = 2;         // 角色名
    int32 level = 3;              // 等级
    int64 exp = 4;                // 经验
    int64 gold = 5;               // 金币
    int64 diamond = 6;            // 钻石
    int64 bind_diamond = 7;       // 绑定钻石
    int32 vip_level = 8;          // VIP 等级
    int64 vip_exp = 9;            // VIP 经验
    int32 avatar_id = 10;         // 头像 ID
    int32 frame_id = 11;          // 头像框 ID
    int32 gender = 12;            // 性别
    int32 profession = 13;        // 职业
    int32 energy = 14;            // 体力
    int32 max_energy = 15;        // 最大体力
    int64 energy_recover_time = 16; // 体力恢复时间
    int64 combat_power = 17;      // 战力
    int64 create_time = 18;       // 创建时间
    int64 guild_id = 19;          // 公会 ID
    string guild_name = 20;       // 公会名
    int32 guild_position = 21;    // 公会职位
    string signature = 22;        // 签名
}

// 模块数据
message ModuleData {
    int32 module_id = 1;          // 模块 ID
    bytes data = 2;               // 模块数据
}

// --- 0x0101 握手 ---
message C2S_Handshake {
    string client_version = 1;    // 客户端版本号
    string platform = 2;          // 平台 (ios/android/pc)
    string device_id = 3;         // 设备唯一标识
    string device_model = 4;      // 设备型号
    string os_version = 5;        // 系统版本
    string language = 6;          // 语言
    string channel = 7;           // 渠道标识
}

message S2C_Handshake {
    Result result = 1;
    int64 server_time = 2;        // 服务器时间
    string session_key = 3;       // 会话密钥
    bool need_update = 4;         // 是否需要更新
    string update_url = 5;        // 更新地址
    string notice = 6;            // 公告内容
}

// --- 0x0102 账号登录 ---
message C2S_AccountLogin {
    LoginType login_type = 1;     // 登录类型
    string account = 2;           // 账号
    string credential = 3;        // 凭证 (密码/Token)
    string device_id = 4;         // 设备 ID
    string platform = 5;          // 平台
    string client_version = 6;    // 客户端版本
    string channel = 7;           // 渠道
}

message S2C_AccountLogin {
    Result result = 1;
    string account_id = 2;        // 账号 ID
    string token = 3;             // 登录 Token
    int64 token_expire_time = 4;  // Token 过期时间
    bool is_new_account = 5;      // 是否新账号
    string bind_info = 6;         // 已绑定的第三方账号
}

// --- 0x0103 绑定账号 ---
message C2S_BindAccount {
    LoginType bind_type = 1;      // 绑定类型
    string credential = 2;        // 凭证
    string email = 3;             // 邮箱
}

message S2C_BindAccount {
    Result result = 1;
    string account_id = 2;
}

// --- 0x0104 获取服务器列表 ---
message C2S_GetServerList {
}

message S2C_GetServerList {
    Result result = 1;
    repeated ServerGroup server_groups = 2;
    int32 recommended_server_id = 3;
    int32 last_login_server_id = 4;
}

// --- 0x0105 选择服务器 ---
message C2S_SelectServer {
    int32 server_id = 1;
}

message S2C_SelectServer {
    Result result = 1;
    string game_server_host = 2;
    int32 game_server_port = 3;
    string enter_token = 4;
    repeated RoleBrief roles = 5;
}

// --- 0x0106 检查角色名 ---
message C2S_CheckRoleName {
    string role_name = 1;
}

message S2C_CheckRoleName {
    Result result = 1;
    bool available = 2;
    string suggestion = 3;
}

// --- 0x0107 创建角色 ---
message C2S_CreateRole {
    string role_name = 1;
    int32 avatar_id = 2;
    int32 gender = 3;
    int32 profession = 4;
}

message S2C_CreateRole {
    Result result = 1;
    RoleBrief role = 2;
}

// --- 0x0108 进入游戏 ---
message C2S_EnterGame {
    int64 role_id = 1;
}

message S2C_EnterGame {
    Result result = 1;
    PlayerFullInfo player = 2;
    int64 server_time = 3;
    repeated ModuleData modules = 4;
}

// --- 0x0109 登出 ---
message C2S_Logout {
}

message S2C_Logout {
    Result result = 1;
}

// --- 0x010A 重连 ---
message C2S_Reconnect {
    string token = 1;
    int64 role_id = 2;
    int32 server_id = 3;
}

message S2C_Reconnect {
    Result result = 1;
    PlayerFullInfo player = 2;
    int64 server_time = 3;
}

// --- 0x010B 心跳 ---
message C2S_Heartbeat {
    int64 client_time = 1;
}

message S2C_Heartbeat {
    Result result = 1;
    int64 server_time = 2;
}


// =====================================================================================
//                              玩家模块 (0x0200 - 0x02FF)
// =====================================================================================

// 玩家信息
message PlayerInfo {
    int64 role_id = 1;
    string role_name = 2;
    int32 level = 3;
    int64 exp = 4;
    int64 gold = 5;
    int64 diamond = 6;
    int64 bind_diamond = 7;
    int32 vip_level = 8;
    int64 vip_exp = 9;
    int32 avatar_id = 10;
    int32 frame_id = 11;
    int32 energy = 12;
    int32 max_energy = 13;
    int64 energy_recover_time = 14;
    int64 combat_power = 15;
    int64 guild_id = 16;
    string guild_name = 17;
    string signature = 18;
    int64 create_time = 19;
    int64 last_login_time = 20;
}

// --- 0x0201 获取玩家信息 ---
message C2S_GetPlayerInfo {
    int64 role_id = 1;           // 0 表示自己
}

message S2C_GetPlayerInfo {
    Result result = 1;
    PlayerInfo player = 2;
}

// --- 0x0202 更新玩家信息 ---
message C2S_UpdatePlayer {
    int32 avatar_id = 1;
    int32 frame_id = 2;
    string signature = 3;
}

message S2C_UpdatePlayer {
    Result result = 1;
}

// --- 0x0203 修改名字 ---
message C2S_ChangeName {
    string new_name = 1;
}

message S2C_ChangeName {
    Result result = 1;
    string new_name = 2;
}

// --- 0x0210 获取背包 ---
message C2S_GetBag {
    int32 bag_type = 1;          // 0 表示全部
}

message S2C_GetBag {
    Result result = 1;
    repeated ItemInstance items = 2;
    int32 capacity = 3;
}

// --- 0x0211 使用物品 ---
message C2S_UseItem {
    int64 item_uid = 1;
    int32 count = 2;
    int64 target_id = 3;
}

message S2C_UseItem {
    Result result = 1;
    RewardInfo reward = 2;
}

// --- 0x0212 出售物品 ---
message C2S_SellItem {
    int64 item_uid = 1;
    int32 count = 2;
}

message S2C_SellItem {
    Result result = 1;
    int64 gold = 2;
}

// --- 0x0213 整理背包 ---
message C2S_ArrangeBag {
    int32 bag_type = 1;
}

message S2C_ArrangeBag {
    Result result = 1;
    repeated ItemInstance items = 2;
}


// =====================================================================================
//                              公会模块 (0x0600 - 0x06FF)
// =====================================================================================

// 公会信息
message GuildInfo {
    int64 guild_id = 1;
    string guild_name = 2;
    int32 level = 3;
    int64 exp = 4;
    int32 icon_id = 5;
    string declaration = 6;
    int64 leader_id = 7;
    string leader_name = 8;
    int32 member_count = 9;
    int32 max_member = 10;
    int64 create_time = 11;
    int32 join_type = 12;        // 0:自由 1:审批 2:禁止
    int32 join_level = 13;
}

// 公会成员
message GuildMember {
    int64 role_id = 1;
    string role_name = 2;
    int32 level = 3;
    int32 avatar_id = 4;
    int32 position = 5;          // 0:成员 1:精英 2:副会长 3:会长
    int64 contribution = 6;
    int64 join_time = 7;
    int64 last_login = 8;
    bool is_online = 9;
}

// --- 0x0601 创建公会 ---
message C2S_CreateGuild {
    string guild_name = 1;
    string declaration = 2;
    int32 icon_id = 3;
}

message S2C_CreateGuild {
    Result result = 1;
    GuildInfo guild = 2;
}

// --- 0x0602 获取公会信息 ---
message C2S_GetGuildInfo {
    int64 guild_id = 1;          // 0 表示自己公会
}

message S2C_GetGuildInfo {
    Result result = 1;
    GuildInfo guild = 2;
    repeated GuildMember members = 3;
}

// --- 0x0603 搜索公会 ---
message C2S_SearchGuild {
    string keyword = 1;
    PageRequest page = 2;
}

message S2C_SearchGuild {
    Result result = 1;
    repeated GuildInfo guilds = 2;
    PageInfo page = 3;
}

// --- 0x0604 申请加入公会 ---
message C2S_ApplyJoinGuild {
    int64 guild_id = 1;
    string message = 2;
}

message S2C_ApplyJoinGuild {
    Result result = 1;
}

// --- 0x0605 处理加入申请 ---
message C2S_HandleGuildApply {
    int64 apply_id = 1;
    int64 role_id = 2;
    bool accept = 3;
}

message S2C_HandleGuildApply {
    Result result = 1;
}

// --- 0x0606 退出公会 ---
message C2S_LeaveGuild {
}

message S2C_LeaveGuild {
    Result result = 1;
}

// --- 0x0607 踢出成员 ---
message C2S_KickGuildMember {
    int64 role_id = 1;
}

message S2C_KickGuildMember {
    Result result = 1;
}

// --- 0x0608 公会捐献 ---
message C2S_GuildDonate {
    int32 donate_type = 1;       // 1:金币 2:钻石
    int64 amount = 2;
}

message S2C_GuildDonate {
    Result result = 1;
    int64 contribution = 2;
    int64 guild_exp = 3;
}

// --- 0x0609 修改成员职位 ---
message C2S_ChangeGuildPosition {
    int64 role_id = 1;
    int32 new_position = 2;
}

message S2C_ChangeGuildPosition {
    Result result = 1;
}

// --- 0x060A 转让会长 ---
message C2S_TransferGuildLeader {
    int64 new_leader_id = 1;
}

message S2C_TransferGuildLeader {
    Result result = 1;
}

// --- 0x060B 修改公会设置 ---
message C2S_ChangeGuildSetting {
    string declaration = 1;
    int32 join_type = 2;         // -1 表示不修改
    int32 join_level = 3;        // -1 表示不修改
}

message S2C_ChangeGuildSetting {
    Result result = 1;
}


// =====================================================================================
//                              聊天模块 (0x0700 - 0x07FF)
// =====================================================================================

// 聊天消息
message ChatMessage {
    int64 msg_id = 1;
    int32 channel = 2;           // 1:世界 2:公会 3:私聊 4:系统
    int64 sender_id = 3;
    string sender_name = 4;
    int32 sender_level = 5;
    int32 sender_avatar = 6;
    int32 sender_vip = 7;
    string content = 8;
    int64 send_time = 9;
    int64 target_id = 10;
    string target_name = 11;
}

// --- 0x0701 发送聊天消息 ---
message C2S_SendChat {
    int32 channel = 1;
    string content = 2;
    int64 target_id = 3;
}

message S2C_SendChat {
    Result result = 1;
    int64 msg_id = 2;
}

// --- 0x0702 获取聊天记录 ---
message C2S_GetChatHistory {
    int32 channel = 1;
    int64 target_id = 2;
    int64 last_msg_id = 3;
    int32 count = 4;
}

message S2C_GetChatHistory {
    Result result = 1;
    repeated ChatMessage messages = 2;
}


// =====================================================================================
//                              排行模块 (0x0800 - 0x08FF)
// =====================================================================================

// 排行榜条目
message RankEntry {
    int32 rank = 1;
    int64 role_id = 2;
    string role_name = 3;
    int32 level = 4;
    int32 avatar_id = 5;
    int64 guild_id = 6;
    string guild_name = 7;
    int64 score = 8;
    map<string, string> extra = 9;
}

// --- 0x0801 获取排行榜 ---
message C2S_GetRankList {
    int32 rank_type = 1;
    int32 start = 2;             // 从 1 开始
    int32 count = 3;
}

message S2C_GetRankList {
    Result result = 1;
    int32 rank_type = 2;
    repeated RankEntry entries = 3;
    int64 refresh_time = 4;
}

// --- 0x0802 获取自己排名 ---
message C2S_GetMyRank {
    int32 rank_type = 1;
}

message S2C_GetMyRank {
    Result result = 1;
    int32 rank = 2;              // 0 表示未上榜
    int64 score = 3;
}


// =====================================================================================
//                              推送消息 (0xF000 - 0xFFFF)
// =====================================================================================

// --- 0xF001 踢下线 ---
message S2C_KickOut {
    int32 reason = 1;            // 1:异地登录 2:封禁 3:维护
    string message = 2;
}

// --- 0xF002 玩家属性变化 ---
message S2C_PlayerAttrChange {
    int32 attr_type = 1;
    int64 old_value = 2;
    int64 new_value = 3;
    string reason = 4;
}

// --- 0xF003 升级 ---
message S2C_LevelUp {
    int32 old_level = 1;
    int32 new_level = 2;
    RewardInfo reward = 3;
}

// --- 0xF004 物品变化 ---
message S2C_ItemChange {
    int32 change_type = 1;       // 1:增加 2:减少 3:修改
    ItemInstance item = 2;
    string reason = 3;
}

// --- 0xF010 聊天消息推送 ---
message S2C_ChatPush {
    ChatMessage message = 1;
}

// --- 0xF011 系统公告 ---
message S2C_SystemNotice {
    int32 notice_type = 1;       // 1:滚动 2:弹窗 3:邮件
    string title = 2;
    string content = 3;
    int64 start_time = 4;
    int64 end_time = 5;
}

// --- 0xF020 公会成员变化 ---
message S2C_GuildMemberChange {
    int32 change_type = 1;       // 1:加入 2:退出 3:踢出
    GuildMember member = 2;
}

// --- 0xF021 公会信息变化 ---
message S2C_GuildInfoChange {
    GuildInfo guild = 1;
}

// --- 0xF022 公会申请 ---
message S2C_GuildApply {
    int64 apply_id = 1;
    int64 role_id = 2;
    string role_name = 3;
    int32 level = 4;
    string message = 5;
    int64 apply_time = 6;
}

// --- 0xF030 新邮件 ---
message S2C_NewMail {
    int64 mail_id = 1;
    int32 mail_type = 2;
    string title = 3;
    bool has_attachment = 4;
}

// --- 0xF040 好友请求 ---
message S2C_FriendRequest {
    int64 role_id = 1;
    string role_name = 2;
    int32 level = 3;
    int32 avatar_id = 4;
}

// --- 0xF041 好友上线 ---
message S2C_FriendOnline {
    int64 role_id = 1;
}

// --- 0xF042 好友下线 ---
message S2C_FriendOffline {
    int64 role_id = 1;
}
